--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -146,7 +146,7 @@ body {
   .banner {
     width: 100%;
     height: 500px; /* Vous pouvez ajuster la hauteur ici */
-    background-image: url(https://i.pinimg.com/originals/19/fd/08/19fd08920bd51a1a8343e88509d20aeb.jpg); /* Remplacez par l'URL de votre image */
+    background-image: url(https://moewalls.com/wp-content/uploads/2023/01/zack-fair-crisis-core-final-fantasy-vii-reunion-thumb.jpg); /* Remplacez par l'URL de votre image */
     background-size: cover;
     background-position: center;
     display: flex;
@@ -236,6 +236,71 @@ body {
     max-width: 800px;
     height: 450px;
     border-radius: 10px;
+}
+
+/* Conteneur d'image */
+.image-container {
+  position: relative;
+}
+
+/* Image miniature cliquable */
+.clickable-image {
+  width: 300px;
+  height: auto;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.clickable-image:hover {
+  transform: scale(1.05);
+}
+
+/* Fenêtre modale */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Contenu de l'image agrandie */
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* Légende sous l'image */
+#caption {
+  text-align: center;
+  color: white;
+  padding: 10px 0;
+  font-size: 1.2rem;
+}
+
+/* Bouton pour fermer */
+.close {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.close:hover,
+.close:focus {
+  color: #ccc;
 }
 /*footer*/
 
